--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "text-to-svg",
+  "name": "text-to-svg-vbg",
   "version": "3.1.5",
   "description": "Convert text to SVG path without native dependence.",
   "main": "index.js",
@@ -30,7 +30,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/shrhdk/text-to-svg"
+    "url": "https://github.com/belvue/text-to-svg"
   },
   "keywords": [
     "fonts",
@@ -43,9 +43,9 @@
   "author": "Hideki Shiro",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/shrhdk/text-to-svg/issues"
+    "url": "https://github.com/belvue/text-to-svg/issues"
   },
-  "homepage": "https://github.com/shrhdk/text-to-svg",
+  "homepage": "https://github.com/belvue/text-to-svg",
   "dependencies": {
     "commander": "^2.11.0",
     "opentype.js": "0.11.0"
